 2015-09-11 09:57  dimitr 
   M src/jrd/opt.cpp
   M src/jrd/recsrc/MergeJoin.cpp
   M src/jrd/recsrc/RecordSource.h
   M src/jrd/recsrc/SortedStream.cpp
Fixed CORE-4909 re. sort/merge joins.

 2015-09-10 17:06  asfernandes 
   M src/dsql/StmtNodes.cpp
   M src/jrd/exe.cpp
   M src/jrd/tra.h
   M src/jrd/vio.cpp
Fixed CORE-4928 - It is not possible to save the connection information in the ON CONNECT trigger, if the connection is created by the gbak.

 2015-09-10 14:03  alexpeshkoff 
   M src/jrd/svc.cpp
Postfix for CORE-4897: avoid problems with clients not understanding "data not ready" state (like IBE)

 2015-09-09 21:38  dimitr 
   M src/dsql/StmtNodes.cpp
This should fix CORE-4929: Cannot compile source with ELSE IF () THEN and commands to manipulate explicit cursor.

 2015-09-06 19:00  asfernandes 
   M src/jrd/recsrc/Cursor.cpp
Avoid code duplication.

 2015-09-06 18:52  asfernandes 
   M src/common/Tokens.cpp
   M src/common/unicode_util.cpp
   M src/jrd/dpm.epp
Misc.

 2015-09-04 21:14  dimitr 
   M src/jrd/Record.h
Removed incorrect assertion (CORE-4902).

 2015-09-04 10:53  alexpeshkoff 
   M src/isql/isql.epp
Rollback frontend transaction after getting login and role names

 2015-09-03 21:14  hvlad 
   M src/jrd/btr.cpp
Postfix for CORE-4904

 2015-09-03 17:42  robocop 
   M src/yvalve/why.cpp
Misc.

 2015-09-03 16:30  asfernandes 
   M src/dsql/DdlNodes.epp
Fixed CORE-4585 - Can't create column check constraint when the column is domain based.

 2015-09-02 18:17  alexpeshkoff 
   M src/common/StatusArg.cpp
Fixed segfault, reported privately by Vlad

 2015-09-02 16:24  asfernandes 
   M doc/sql.extensions/README.ddl_triggers.txt
   M src/dsql/DdlNodes.epp
   M src/dsql/DdlNodes.h
   M src/dsql/Nodes.h
   M src/dsql/PackageNodes.epp
   M src/dsql/StmtNodes.cpp
   M src/jrd/Attachment.h
   M src/jrd/SysFunction.cpp
Improvement CORE-4923 - Add ability to track domains rename in DDL triggers.

 2015-09-01 20:51  dimitr 
   M src/jrd/RecordSourceNodes.cpp